test/corpus/fail/M0075.mo
=========
M0075.mo
=========

ignore true[0]

---

(source_file
  (exp_dec
    (ignore_exp
      (array_idx_exp_block
        (lit_exp
          (bool_literal))
        (lit_exp
          (int_literal))))))
